# game-smith

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  game-smith.desktop  tailwind.config.js
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build-matrix.yaml  build.yaml  ci.yaml  release.yaml
.omp/skills/: loco-errors.md  loco-models.md
.omp/skills/loco-errors/: SKILL.md
.omp/skills/loco-models/: SKILL.md
assets/app/: game-smith.desktop
assets/css/: common.css  shutdown.css  tailwind.css
assets/i18n/de-DE/: main.ftl
assets/i18n/en-US/: main.ftl
assets/static/css/: app.css  commands.css  tailwind.css
assets/static/js/: commands.js  copy-all.js  server-show.js  shutdown.js
assets/views/_layout/: base.html
assets/views/_macros/: item_card.html  status_badge.html  steam_image.html
assets/views/autostart/: settings.html
assets/views/commands/: detail.html  list.html
assets/views/game_servers/: list.html  new.html  new_form.html  select_template.html  show.html  shutdown.html
assets/views/game_templates/: edit.html  import.html  list.html  new.html  show.html
assets/views/home/: hello.html
assets/views/steam_config/: config.html
assets/views/steamcmd/: status.html
config/: development.yaml  scheduler.yaml  test.yaml
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260523_192956_command_runs.rs  m20260524_201932_command_run_title.rs  m20260524_211537_create_game_servers.rs  m20260525_000001_create_steam_credentials.rs  m20260527_225027_add_use_steam_login.rs  m20260606_000001_remove_game_servers_pid.rs  m20260606_164320_remove_pid_from_game_servers.rs  m20260608_224254_create_game_templates.rs  m20260611_160653_add_unique_constraints.rs  m20260612_230509_add_template_id_to_game_servers.rs
packaging/rpm/: game-smith.spec
scripts/: setup.sh
src/: app.rs  lib.rs  scheduler.rs
src/controllers/: auth.rs  autostart.rs  commands.rs  error.rs  game_servers.rs  game_templates.rs  mod.rs  shutdown.rs  steam_config.rs  steamcmd.rs
src/data/: command_runner.rs  encryption.rs  game_server_installer.rs  mod.rs  shutdown_tracker.rs  steamcmd.rs
src/data/game_server_installer/: linux.rs  mod.rs  windows.rs
src/data/steamcmd/: linux.rs  mod.rs  windows.rs
src/desktop/: autostart.rs  mod.rs  notifications.rs  tray.rs
src/desktop/tray/: linux.rs  mod.rs  windows.rs
src/initializers/: command_log_socket.rs  command_namespace.rs  db_validator.rs  embedded_i18n.rs  embedded_static.rs  mod.rs  secret_key.rs  steamcmd.rs  view_engine.rs
src/models/: command_runs.rs  game_servers.rs  game_templates.rs  mod.rs  steam_credentials.rs
src/models/_entities/: command_runs.rs  game_servers.rs  game_templates.rs  mod.rs  prelude.rs  steam_credentials.rs
src/models/process/: linux.rs  mod.rs  windows.rs
src/tasks/: log_cleanup.rs  mod.rs  pid_liveness.rs
src/views/: autostart.rs  commands.rs  game_servers.rs  game_templates.rs  mod.rs  shutdown.rs  steam_config.rs  steamcmd.rs
src/workers/: command_exec.rs  log_cleanup.rs  mod.rs  steamcmd_install.rs
src/workers/command_exec/: linux.rs  mod.rs  windows.rs
tests/: log_integration.rs  migration_cleanup.rs  mod.rs  steamcmd.rs
tests/desktop/: config.rs  mod.rs  tray.rs
tests/models/: command_runs.rs  game_servers.rs  mod.rs  users.rs
tests/requests/: auth.rs  commands.rs  game_servers.rs  game_templates.rs  mod.rs  prepare_data.rs  shutdown.rs  steam_config.rs  steamcmd.rs
tests/tasks/: mod.rs  pid_liveness.rs
tests/workers/: log_cleanup.rs  mod.rs
wix/: main.wxs
