[workspace]

[package]
name = "game-smith"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "game-smith"
authors = ["brand-it"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = { version = "0.4" }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.13", features = ["tera"] }
unic-langid = { version = "0.9" }
# /view engine
axum-extra = { version = "0.10", features = ["form"] }

open = { version = "5" }

# desktop integration (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }
gtk = { version = "0.18" }
glib = { version = "0.18" }
notify-rust = { version = "4" }
[[bin]]
name = "game-smith"
path = "src/bin/main.rs"
required-features = []
[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Game Smith"
identifier = "com.gamesmith.app"
category = "Utility"
license-file = "LICENSE"
homepage = "https://github.com/brand-it/game-smith"
description = "Cross-platform game server management tool"
icons = ["assets/icons/game-smith-256.png", "assets/icons/game-smith-48.png"]
formats = ["deb", "appimage"]
authors = ["brand-it <brandit@example.com>"]

[package.metadata.packager.deb]
desktop-template = "assets/app/game-smith.desktop"
depends = ["libgtk-3-0", "libappindicator3-1"]
