[workspace]

[package]
name = "game-smith"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "game-smith"
authors = ["brand-it"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "process",
  "fs",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1", features = ["log"] }
log = { version = "0.4" }
regex = { version = "1.11" }
tera = { version = "1.20" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
cron = { version = "0.12" }
serde_yaml = { version = "0.9" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
mime_guess = { version = "2" }
# view engine i18n
fluent-templates = { version = "0.13", features = ["tera", "macros"] }
unic-langid = { version = "0.9" }
# /view engine
axum-extra = { version = "0.10", features = ["form"] }
socketioxide = { version = "0.18", features = ["extensions", "state"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

open = { version = "5" }
# steamcmd installation & execution
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tar = { version = "0.4" }
flate2 = { version = "1" }
zip = { version = "2" }
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = { version = "0.2" }
rand_core = { version = "0.6", features = ["getrandom"] }

# desktop integration (Linux: GTK, Windows: Win32)

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }
gtk = { version = "0.18" }
glib = { version = "0.18" }
notify-rust = { version = "4" }
libc = { version = "0.2" }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = { version = "0.24", default-features = false }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
[[bin]]
name = "game-smith"
path = "src/bin/main.rs"
required-features = []
[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
 serde_urlencoded = { version = "0.7" }

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Game Smith"
identifier = "com.gamesmith.app"
category = "Utility"
license-file = "LICENSE"
homepage = "https://github.com/brand-it/game-smith"
description = "Cross-platform game server management tool"
icons = ["assets/icons/game-smith-256.png", "assets/icons/game-smith-48.png"]
formats = ["deb", "appimage"]
authors = ["brand-it <brandt@lareaus.com>"]

[package.metadata.packager.deb]
desktop-template = "game-smith.desktop"
depends = ["libgtk-3-0", "libappindicator3-1"]

[package.metadata.wix]
upgrade-guid = "A8F3C7E1-9B2D-4E5F-8A1C-3D7E9F2B4C6A"
path-guid = "B2E4D8F3-1C5A-4D7E-9B3F-6A8C2E4D7F9B"
license = false
eula = false